--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="center jumbotron">
+  <h1>ABC Bank</h1>
+  <%= link_to "Open Account", new_user_registration_path, class: "btn btn-primary btn-lg" %><br>
+	<br><br><br><br>
+	<%= link_to "Login", new_user_session_path, class: "btn btn-info btn-lg" %>
