--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "BanksTest" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Abc Bank" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -37,7 +37,6 @@
     <![endif]-->
   </head>
   <body>
-
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -54,48 +53,33 @@
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
 					<ul class="nav navbar-right col-md-4">
-<% if current_user %>
-<li class="col-md-8 user-name">
-<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
-edit_user_registration_path, title: 'Edit Profile' %>
-</li>
-<li class="col-md-1"> </li>
-<li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
-class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
-<% else %>
-<li class="col-md-4 pull-right">
-<%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
-</li>
-<% end %>
-</ul>
+					<% if current_user %>
+					<li class="col-md-8 user-name">
+					<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
+					edit_user_registration_path, title: 'Edit Profile' %>
+					</li>
+					<li class="col-md-1"> </li>
+					<li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
+					class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
+					<% else %>
+					<li class="col-md-4 pull-right">
+					<%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+					</li>
+					<% end %>
+					</ul>
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-      </div><!--/row-->
-
-      <footer>
-        <p>&copy; Company 2016</p>
-      </footer>
-
-    </div> <!-- /container -->
-
+       </div><!--/row-->
+      </div> <!-- /container -->
+		 <div class="footer navbar-fixed-bottom secondary">
+     <p align="center"> MSc Software Engineering Kingston University Software Architecture and Programming Models &copy; Viralkumar Patel 2016</p>
+    </div>
   </body>
 </html>
