--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,21 @@
+<% if current_user %>
+<h3>Welcome: <%= current_user.email %></h3>
+<% else %>
 <div class="center jumbotron">
-  <h1>ABC Bank</h1>
-  <%= link_to "Open Account", new_user_registration_path, class: "btn btn-primary btn-lg" %><br>
-	<br><br><br><br>
-	<%= link_to "Login", new_user_session_path, class: "btn btn-info btn-lg" %>
+<h2 align="center">Welcome to the ABC Bank Internet Banking</h2>
+<br><br><br><br>
+<%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %> <br/>
+	<br><br><br><br><br>
+<%= link_to 'Sign in', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
+</div>
+<div class="row">
+<div class="plans clearfix">
+<div class="col-lg-3 col-lg-offset-3 plan">
+
+<div class="price pull-right">
+
+</div>
+<div class="features">
+<ul>
+
+<% end %>
