--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,11 +14,20 @@ $navbar-default-bg: green;
   text-transform: uppercase;
   letter-spacing: -1px;
   font-weight: bold;
-	margin-top: 5px;
+	margin-top: 2px;
+
+}
+.image_tag{
+	margin-left: 15px;
 }
 #navbar-fixed-bottom{
 	background-image: asset-url('Background_1.jpg');
 	background-size: cover;
+}
+.form-group{
+	margin-left: 5px;
+	margin-right: 5px;
+
 }
 #bs-example-navbar-collapse-1{
 	flot:left;
@@ -54,6 +63,9 @@ $navbar-default-bg: green;
 	margin-top: 5px;
 }
 
+h1 {
+    text-align: center;
+}
 .user-name {
 padding: 0 !important ;
 padding-left: 5px;
@@ -91,8 +103,13 @@ color: #fff;
 }
 li a {
 margin-right: 5px;
+
 }
+	li a {
+		color: #fff;
+	}
 }
+
 .nav.navbar-right li {
 .btn {
 color: #fff !important;
