--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,8 @@
 <% if current_user %>
 <h3>Welcome: <%= current_user.email %></h3>
-
 <% else %>
 
-					<% if current_user.try(:admin?) %>
+<% if current_user.admin? %>
 					<li class="col-md-8 user-name">
 					<%= link_to edit_user_registration_path, title: 'Edit Profile' %>
 					<h6>Admin</h6>
