--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,10 +51,11 @@
 
           <ul class="nav navbar-nav">
 
-						<% if logged_in? and current_user.try(:admin?) %>
+						<% if logged_in? and not current_user.try(:admin?) %>
 						<li><%= link_to "Transfer Money", new_transaction_path %></li>
-	          <li><%= link_to "Statement", transactions_path %></li>
-						<% elsif logged_in? or current_user.try(:admin?) %>
+	          <li><%= link_to "Statement", root_path %></li>
+
+						<% elsif current_user.try(:admin?) %>
 						<li><%= link_to "Customers", accounts_path %></li>
 						<li><%= link_to "Employee", employees_path %></li>
 						<li><%= link_to "Create Employee", new_employee_path %></li>
@@ -64,6 +65,7 @@
           </ul>
 					<ul class="nav navbar-right col-md-4">
 					<% if current_user.try(:admin?) %>
+					<h4 align="center">Admin</h4>
 					<li class="col-md-8 user-name">
 					<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
 					edit_user_registration_path, title: 'Edit Profile' %>
@@ -73,7 +75,7 @@
 					class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
 					<% elsif current_user %>
 					<li class="col-md-8 user-name">
-					<h4>Admin</h4>
+
 					<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
 					edit_user_registration_path, title: 'Edit Profile' %>
 					</li>
@@ -90,6 +92,7 @@
       </div>
     </div>
     <div class="container">
+
       <div class="row">
         <div class="col-lg-12">
           <%= bootstrap_flash %>
