--- a/app/views/transactions/afterlogin.html.erb
+++ b/app/views/transactions/afterlogin.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-<h3>Welcome: <%= current_user.email %></h3>
+<h3 align="center">Welcome: <%= current_user.email %></h3>
 
 <%= render 'transaction', obj: current_user.transactions %>
 
