--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -3,6 +3,7 @@
    <div class="contextual">
   </div>
 </div>
+<h3 align="center">Welcome: <%= current_user.accounts.name %></h3>
 <table class="table table-striped table-bordered table-condensed">
 <thead>
 <tr>
