--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -9,11 +9,11 @@
 	<div class="panel-body">
   <div class="form-group">
 		<%= f.label :customer_Account_Number %><br>
-		<%= f.number_field :customer_id, :size=>8,:readonly => true, :value => rand(1..90000001).to_s, class: "form-control" %>
+		<%= f.number_field :customer_id, :maxlength => 8,:readonly => true, :value => rand(1..90000001).to_s, class: "form-control" %>
   </div>
 		<div class="form-group">
 		<%= f.label :Customer_Name %><br>
-			<%= f.text_field :name, class: "form-control" %>
+			<%= f.text_field :name,:maxlength => 70, class: "form-control" %>
   </div>
 		<div class="form-group">
 			<%= f.label :Gender %><br>
@@ -26,19 +26,19 @@
   </div>
 		<div class="form-group">
 		<%= f.label :Customer_Address %><br>
-			<%= f.text_field :address, class: "form-control" %>
+			<%= f.text_field :address,:maxlength => 150, class: "form-control" %>
   </div>
 		<div class="form-group">
 			<%= f.label :Postcode %><br>
-			<%= f.text_field :postcode, class: "form-control" %>
+			<%= f.text_field :postcode,:maxlength => 7, class: "form-control" %>
   </div>
 		<div class="form-group">
 		<%= f.label :Email_Address %><br>
-			<%= f.email_field :email, class: "form-control" %>
+			<%= f.email_field :email, :maxlength => 50,class: "form-control" %>
   </div>
 		<div class="form-group">
 			<%= f.label :Phone_Number %><br>
-			<%= f.number_field :phone, class: "form-control" %>
+			<%= f.number_field :phone, :maxlength => 11,class: "form-control" %>
   </div>
   <div class="form-group">
 		<%= f.label :Account_Type %>
@@ -46,11 +46,11 @@
   </div>
   <div class="form-group">
 		<%= f.label :Balance_Deposit_Amount %><br>
-    <%= f.number_field :balance, class: "form-control" %>
+    <%= f.number_field :balance, :minlength => 3, class: "form-control" %>
   </div>
   <div class="form-group">
 		<%= f.label :Overdraft %><br>
-    <%= f.number_field :minBalance, class: "form-control" %>
+    <%= f.number_field :minBalance, :maxlength => 3, class: "form-control" %>
   </div>
 
   <div class="form-group">
