--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,37 +1,5 @@
-<p id="notice"><%= notice %></p>
+<%= render 'employees/employee', obj: @employees %>
+<div align="center">
 
-<h1>Listing Employees</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Fullname</th>
-      <th>Address</th>
-      <th>Phone</th>
-      <th>Employeerole</th>
-      <th>Email</th>
-      <th>Branch</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @employees.each do |employee| %>
-      <tr>
-        <td><%= employee.fullname %></td>
-        <td><%= employee.address %></td>
-        <td><%= employee.phone %></td>
-        <td><%= employee.employeeRole %></td>
-        <td><%= employee.email %></td>
-        <td><%= employee.branch %></td>
-        <td><%= link_to 'Show', employee %></td>
-        <td><%= link_to 'Edit', edit_employee_path(employee) %></td>
-        <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Employee', new_employee_path %>
+<%= will_paginate %>
+</div>
