--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -20,19 +20,19 @@
   </div>
   <div class="form-group">
 		<%= f.label :Transaction_Description %><br>
-		<%= f.text_field :description, autocomplete: "off", :placeholder => "Transfer Money to Family......", class: "form-control" %>
+		<%= f.text_field :description, :maxlength => 150, autocomplete: "off", :placeholder => "Transfer Money to Family......", class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :Transaction_Amount %><br>
-    <%= f.number_field :amount, autocomplete: "off", :placeholder => "£ 500 ", class: "form-control" %>
+    <%= f.number_field :amount, :maxlength => 15, autocomplete: "off", :placeholder => "£ 500 ", class: "form-control" %>
   </div>
   <div class="form-group">
 		<%= f.label :Beneficiary_Account_Number %><br>
-    <%= f.text_field :account_id, autocomplete: "off", :placeholder => "13936369 ",class: "form-control" %>
+		<%= f.number_field :account_id, :maxlength => 8, autocomplete: "off", :placeholder => "13936369 ",class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :employee_id %><br>
-    <%= f.text_field :employee_id, autocomplete: "off",:placeholder => " Viralkumar ", class: "form-control" %>
+		<%= f.text_field :employee_id, :maxlength => 35,autocomplete: "off",:placeholder => " Viralkumar ", class: "form-control" %>
   </div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
