--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'accounts/account', obj: @accounts %>
 
 <div align="center">
-<%= will_paginate %>
+<%= will_paginate @accounts %>
 </div>
