--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,6 +1,42 @@
-<h1>Editing Employee</h1>
+<%= render 'shared/errors', obj: @employee %>
+<div class='row'>
+<div class='col-xs-12'>
+	<%= form_for(@employee, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+<div class="panel panel-default">
+	 <div class="panel-heading">
+		 <h4><%= t('.sign_in', :default => "Employees") %></h4>
+		 </div>
+  <div class="panel-body">
+		<div class="form-group">
+    <%= f.label :fullname %><br>
+    <%= f.text_field :fullname,:maxlength => 70,class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.label :address %><br>
+    <%= f.text_field :address, :maxlength => 150,class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.label :phone %><br>
+    <%= f.text_field :phone,:maxlength => 11, class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.label :employeeRole %><br>
+    <%= f.text_field :employeeRole, :maxlength => 30,class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.label :email %><br>
+    <%= f.text_field :email ,:maxlength => 50, class: "form-control"%>
+  </div>
+  <div class="form-group">
+		<%= f.label :Branch_Name %><br>
+		<%= f.select :branch, options_for_select([['Kingston'], ['Croydon'], ['Kensington'], ['Birmingham'], ['Manchester'],
+	['Glasgow'], ['Ulster'], ['New Castle']], params[:branchName]), {}, { :class => "form-control"} %>
+	</div>
+  <div class="actions">
+    <%= f.submit class: "btn btn-primary"%>
+  </div>
+<% end %>
 
-<%= render 'form' %>
 
 <%= link_to 'Show', @employee %> |
 <%= link_to 'Back', employees_path %>
