--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,4 +1,6 @@
+<% if current_user.try(:admin?) %>
+<h1>ABC Bank's Transactions</h1>
+<% elsif current_user %>
+
+<% end %>
 <%= render 'transactions/transaction', obj: @transactions %>
-<div align="center">
-<%= will_paginate %>
-</div>
