--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -55,11 +55,11 @@
 
   <div class="form-group">
 		<%= f.label :Branch_Name %><br>
-		<%= f.select :branch, options_for_select([['Kingston'], ['Croydon'], ['Kensington'], ['Birmingham'], ['Manchester'],
-	['Glasgow'], ['Ulster'], ['New Castle']], params[:branchname]), {}, { :class => "form-control"} %>
+		<%= f.select :branchName, options_for_select([['Kingston'], ['Croydon'], ['Kensington'], ['Birmingham'], ['Manchester'],
+	['Glasgow'], ['Ulster'], ['New Castle']], params[:branchName]), {}, { :class => "form-control"} %>
 	</div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit  class: "btn btn-primary" %>
   </div>
 <% end %>
