--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,18 +1,22 @@
 <div class="page-header">
-    <h1>Transaction</h1>
+	<% if !current_user.try(:admin?) %>
+	<h6 align="left">Available Balance: <%= %></h6>
+	<h6 align="right">Overdraft Limit: <%= current_user.accounts.user_id %></h6>
+  <% end %>
    <div class="contextual">
   </div>
 </div>
-<h3 align="center">Welcome: <%= current_user.accounts.name %></h3>
+<h3 align="center">Transactions <%= %></h3>
 <table class="table table-striped table-bordered table-condensed">
 <thead>
 <tr>
   <th colspan="1">Transaction Type</th>
-  <th colspan="1">Transaction Method</th>
+	<th colspan="1">Account Number</th>
   <th colspan="1">Transaction Description</th>
   <th colspan="1">Transaction Amount (£ GBP)</th>
+	<th colspan="1">Balance</th>
 	<th colspan="1">Transaction Date</th>
-	<th colspan="1">Account Number</th>
+
 </tr>
 </thead>
 <tbody>
@@ -20,11 +24,13 @@
       <tr>
 
         <td><%= transaction.transType %></td>
-        <td><%= transaction.method %></td>
+				<td><%= transaction.account_id %>
         <td><%= transaction.description %></td>
 				<td><%= transaction.amount %></td>
-				<td><%= transaction.created_at %>
-				<td><%= transaction.account_id %>
+				<td><%= %>
+				<td><%= transaction.created_at.strftime("%d %b %Y %H:%M:%S") %>
+
+
         </td>
 
         <% end %>
@@ -35,7 +41,7 @@
 
 </table>
 <%= link_to 'New Transaction', new_transaction_path %>
-
-<div class="contextual">
-<%= link_to 'Back', accounts_path %>
+<div align="center">
+<%= will_paginate @transactions %>
 </div>
+
