--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -12,7 +12,7 @@
 	<th colspan="1">Cutomer Name </th>
   <th colspan="1">Account Type</th>
   <th colspan="1">Availabel Balance</th>
-  <th colspan="1">Minimum Balance </th>
+  <th colspan="1">Overdraft Limit </th>
 	<th colspan="1">Branch </th>
 	<th colspan="1">Update </th>
 
@@ -26,7 +26,7 @@
 				<td><%= account.name %></td>
         <td><%= account.accountType %></td>
         <td><%= account.balance %></td>
-        <td><%= account.minBalance %></td>
+        <td><%= account.overdraft %></td>
         <td><%= account.branchName %></td>
 
 
