--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -50,7 +50,7 @@
   </div>
   <div class="form-group">
 		<%= f.label :Overdraft %><br>
-    <%= f.number_field :minBalance, :maxlength => 3, class: "form-control" %>
+		<%= f.number_field :overdraft, :maxlength => 3, class: "form-control" %>
   </div>
 
   <div class="form-group">
