--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"></a> <br/>
-				<%= image_tag("ABCBank.png", :alt => "ABCBank") %> <br/>
+        <a class="navbar-brand" href="#"></a><br/>
+				<%= image_tag("ABCBank.png", :alt => "ABCBank") %><br/>
 				<%= link_to "ABC Bank", root_path, class: "navbar-brand", id: "logo" %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
 
@@ -57,7 +57,6 @@
 
 						<% elsif current_user.try(:admin?) %>
 						<li><%= link_to "Employees", employees_path %></li>
-						<li><%= link_to "Setup Employee", new_employee_path %></li>
 						<li><%= link_to "Open Account", new_account_path %></li>
 						<li><%= link_to "Deposit Money", new_transaction_path %></li>
 						<li><%= link_to "Transactions", transactions_path %></li>
@@ -66,10 +65,12 @@
           </ul>
 					<ul class="nav navbar-right col-md-4">
 					<% if current_user.try(:admin?) %>
-					<h4 align="center">Admin</h4>
 					<li class="col-md-8 user-name">
 					<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
 					edit_user_registration_path, title: 'Edit Profile' %>
+				 <h6 align="left|justify"style="color:white">Logged in as Admin</h6>
+				 <h6 align="left|justify"style="color:white"> Last Logged in <%= current_user.last_sign_in_at.strftime("%d %b %Y %H:%M:%S") %></h6>
+				 <h6 align="left|justify"style="color:white">Logged in <%= current_user.sign_in_count %> times </h6>
 					</li>
 					<li class="col-md-1"> </li>
 					<li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
@@ -79,6 +80,9 @@
 
 					<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
 					edit_user_registration_path, title: 'Edit Profile' %>
+						<h6 align="left|justify"style="color:white"><%= @username %></h6>
+				  <h6 align="left|justify"style="color:white"> Last Logged in: <%= current_user.last_sign_in_at.strftime("%d %b %Y %H:%M:%S") %></h6>
+				  <h6 align="left|justify"style="color:white">Logged in: <%= current_user.sign_in_count %> times </h6>
 					</li>
 					<li class="col-md-1"> </li>
 					<li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
