--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,12 +1,14 @@
 <div class="page-header">
 	<% if !current_user.try(:admin?) %>
-	<h6 align="left">Available Balance: <%= %></h6>
-	<h6 align="right">Overdraft Limit: <%= current_user.accounts.user_id %></h6>
-  <% end %>
+	<h5 align="left"> <%= @name.upcase %></h5>
+	<h5 align="left">Available Balance: <%= @balance %></h5>
+	<h5 align="left">Overdraft: <%= @overdraft %></h5>
+
+
+	<% end %>
    <div class="contextual">
   </div>
-</div>
-<h3 align="center">Transactions <%= %></h3>
+<h3 align="center" style="font-family:verdana">Transactions <%=@transactions.count%></h3>
 <table class="table table-striped table-bordered table-condensed">
 <thead>
 <tr>
@@ -16,18 +18,21 @@
   <th colspan="1">Transaction Amount (£ GBP)</th>
 	<th colspan="1">Balance</th>
 	<th colspan="1">Transaction Date</th>
-
 </tr>
 </thead>
 <tbody>
 	<% obj.each do |transaction|  %>
       <tr>
-
         <td><%= transaction.transType %></td>
 				<td><%= transaction.account_id %>
         <td><%= transaction.description %></td>
 				<td><%= transaction.amount %></td>
-				<td><%= %>
+				<% if !current_user.try(:admin?) %>
+	     	<td><%= transaction.amount %>
+	      <% end %>
+				<% if current_user.try(:admin?) %>
+				<td><%= transaction.amount %>
+			  <% end %>
 				<td><%= transaction.created_at.strftime("%d %b %Y %H:%M:%S") %>
 
 
