--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h3>ABC Bank's Employees</h3>
+    <h3 align="center">ABC Bank's Employees</h3>
    <div class="contextual">
   </div>
 </div>
