--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.try(:admin?) %>
-<h3>ABC Bank's Transactions</h3>
+<h3 align="center">ABC Bank's Transactions</h3>
 <% elsif current_user %>
 
 <% end %>
