--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.try(:admin?) %>
-<h3 align="center">ABC Bank's No of Accounts <%= @accounts.count %></h3>
+<h3 align="center">ABC Bank's Total Number of Accounts: <%= @accounts.count %></h3>
 
 <%= render 'accounts/account', obj: @accounts %>
 
