--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -50,7 +50,7 @@
   </div>
   <div class="form-group">
 		<%= f.label :Overdraft %><br>
-    <%= f.number_field :minBalance, class: "form-control" %>
+		<%= f.number_field :overdraft, class: "form-control" %>
   </div>
   <div class="form-group">
 		<%= f.label :Branch_Name %><br>
