--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -8,29 +8,29 @@
 		 </div>
   <div class="panel-body">
 		<div class="form-group">
-    <%= f.label :fullname %><br>
+    <%= f.label :Full_Name %><br>
     <%= f.text_field :fullname,:maxlength => 70,class: "form-control"%>
   </div>
   <div class="form-group">
-    <%= f.label :address %><br>
+    <%= f.label :Address %><br>
     <%= f.text_field :address, :maxlength => 150,class: "form-control"%>
   </div>
   <div class="form-group">
-    <%= f.label :phone %><br>
+    <%= f.label :Phone %><br>
     <%= f.text_field :phone,:maxlength => 11, class: "form-control"%>
   </div>
   <div class="form-group">
-    <%= f.label :employeeRole %><br>
+    <%= f.label :Employee_Role %><br>
     <%= f.text_field :employeeRole, :maxlength => 30,class: "form-control"%>
   </div>
   <div class="form-group">
-    <%= f.label :email %><br>
+    <%= f.label :Email %><br>
     <%= f.text_field :email ,:maxlength => 50, class: "form-control"%>
   </div>
   <div class="form-group">
 		<%= f.label :Branch_Name %><br>
 		<%= f.select :branch, options_for_select([['Kingston'], ['Croydon'], ['Kensington'], ['Birmingham'], ['Manchester'],
-	['Glasgow'], ['Ulster'], ['New Castle']], params[:branchName]), {}, { :class => "form-control"} %>
+	['Glasgow'], ['Ulster'], ['New Castle']], params[:branch]), {}, { :class => "form-control"} %>
 	</div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary"%>
