--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -8,7 +8,7 @@
 	<% end %>
    <div class="contextual">
   </div>
-<h3 align="center" style="font-family:verdana">Transactions <%=@transactions.count%></h3>
+<h5 align="right" style="font-family:verdana">Total Number of transactions: <%=@transactions.count%></h5>
 <table class="table table-striped table-bordered table-condensed">
 <thead>
 <tr>
