--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_field :phone,:maxlength => 11, class: "form-control"%>
   </div>
   <div class="form-group">
-		<%= f.label :Employee Role %><br>
+		<%= f.label :Employee_Role %><br>
     <%= f.text_field :employeeRole, :maxlength => 30,class: "form-control"%>
   </div>
   <div class="form-group">
