--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,10 @@
           <ul class="nav navbar-nav">
 
 						<% if logged_in? and not current_user.try(:admin?) %>
-						<li><%= link_to "Transfer Money", new_transaction_path %></li>
-	          <li><%= link_to "Statement", transactions_path %></li>
-
+						   <% if !@transactions.blank? %>
+                 <li><%= link_to "Transfer Money", new_transaction_path %></li>
+	               <li><%= link_to "Statement", transactions_path %></li>
+                <% end %>
 						<% elsif current_user.try(:admin?) %>
 						<li><%= link_to "Employees", employees_path %></li>
 						<li><%= link_to "Open Account", new_account_path %></li>
