--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <% elsif current_user%>
  <% if @transactions.blank? %>
     <h2 align="center">Welcome to the ABC Bank Internet Banking</h2>
-    <h2 align="center">Please wait for the Account Setup Please visit our nearest branch</h2>
+    <h2 align="center">Please wait for the Account Setup and visit our nearest branch</h2>
     <% else %>
     <%= render 'transactions/transaction', obj: @transactions%>
     <% end %>
