--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -11,14 +11,13 @@
   <th colspan="1">Account Number</th>
 	<th colspan="1">Cutomer Name </th>
   <th colspan="1">Account Type</th>
-  <th colspan="1">Availabel Balance</th>
+  <th colspan="1">Available Balance</th>
   <th colspan="1">Overdraft Limit </th>
 	<th colspan="1">Branch </th>
 	<th colspan="1">Update </th>
 
 </tr>
 </thead>
-
   <tbody>
     <% obj.each do |account| %>
       <tr>
