--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,9 +4,9 @@
     <%= render 'accounts/account', obj: @accounts %>
 
 <% elsif current_user%>
- <% if @transactions.blank? %>
+ <% if @transactions.blank? and @accounts.blank? %>
     <h2 align="center">Welcome to the ABC Bank Internet Banking</h2>
-    <h2 align="center">Please wait for the Account Setup and visit our nearest branch</h2>
+    <h2 align="center">Please wait for the Account Setup andAN visit our nearest branch</h2>
     <% else %>
     <%= render 'transactions/transaction', obj: @transactions%>
     <% end %>
