--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,22 +1,26 @@
 <div class="page-header">
 	<% if !current_user.try(:admin?) %>
 	<h5 align="left"> <%= @name.upcase %></h5>
+	<h5 align="left">Account Number: <%= Account.find(current_user).customer_id %></h5>
 	<h5 align="left">Available Balance: <%= @balance %></h5>
 	<h5 align="left">Overdraft: <%= @overdraft %></h5>
+
 
 
 	<% end %>
    <div class="contextual">
   </div>
 <h5 align="right" style="font-family:verdana">Total Number of transactions: <%=@transactions.count%></h5>
-<table class="table table-striped table-bordered table-condensed">
+<table class="table table-striped table-bordered table-condensed ">
 <thead>
 <tr>
   <th colspan="1">Transaction Type</th>
 	<th colspan="1">Account Number</th>
   <th colspan="1">Transaction Description</th>
   <th colspan="1">Transaction Amount (£ GBP)</th>
+	<% if !current_user.try(:admin?) %>
 	<th colspan="1">Balance</th>
+	<% end %>
 	<th colspan="1">Transaction Date</th>
 </tr>
 </thead>
@@ -28,13 +32,12 @@
         <td><%= transaction.description %></td>
 				<td><%= transaction.amount %></td>
 				<% if !current_user.try(:admin?) %>
-	     	<td><%= transaction.amount %>
+				<td><%= transaction.total_balance %>
 	      <% end %>
 				<% if current_user.try(:admin?) %>
-				<td><%= transaction.amount %>
+
 			  <% end %>
 				<td><%= transaction.created_at.strftime("%d %b %Y %H:%M:%S") %>
-
 
         </td>
 
