--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -174,9 +174,7 @@ color: #fff;
   padding-top: 5px;
 
 }
-body {
-    background-color: lightblue;
-}
+
 .article-meta-details {
 border-top: 1px solid #eaeaea;
 margin-top: 15px;
@@ -184,16 +182,11 @@ margin-top: 15px;
 .description{
   margin-top: 0;
 }
-.article-title {
-font-weight: bold;
-font-size: 1.5em;
-}
-.article-body {
-border-top: 1px solid #eaeaea;
-padding-top: 15px;
-padding-bottom: 15px;
-}
-.listing {
-list-style: none;
-padding-left: 0;
+body {
+     margin: 0;
+
+     background-size: auto;
+     background-repeat:no-repeat;
+     display: compact;
+     font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
