--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -8,15 +8,15 @@
 		 </div>
 	<div class="panel-body">
 	<div class="form-group">
-    <%= f.label :branchName %><br>
+    <%= f.label :Branch_Name %><br>
     <%= f.text_field :branchName, :maxlength => 70, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :branchLocation %><br>
+    <%= f.label :Branch_Location %><br>
     <%= f.text_field :branchLocation, :maxlength => 70, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :branchPostcode %><br>
+    <%= f.label :Branch_Postcode %><br>
     <%= f.text_field :branchPostcode, :maxlength => 7, class: "form-control" %>
   </div>
   <div class="actions">
