--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -29,8 +29,7 @@
   </div>
   <div class="form-group">
 		<%= f.label :Branch_Name %><br>
-		<%= f.select :branch, options_for_select([['Kingston'], ['Croydon'], ['Kensington'], ['Birmingham'], ['Manchester'],
-	['Glasgow'], ['Ulster'], ['New Castle']], params[:branch]), {}, { :class => "form-control"} %>
+		<%= f.collection_select :branch, @get_branch, :id, :branchLocation, { prompt: "Select Branch"}, { :class => "form-control"} %>
 	</div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary"%>
