--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -54,11 +54,10 @@
   </div>
   <div class="form-group">
 		<%= f.label :Branch_Name %><br>
-		<%= f.select :branchName, options_for_select([['Kingston'], ['Croydon'], ['Kensington'], ['Birmingham'], ['Manchester'],
-	['Glasgow'], ['Ulster'], ['New Castle']], params[:branchName]), {}, {:disabled => true, :class => "form-control"} %>
+		<%= f.collection_select :branchName, @get_branch, :id, :branchLocation, {}, { :class => "form-control"} %>
 	</div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary"%>
   </div>
 <% end %>
