--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <strong>Accounttype:</strong>
+  <strong>Account Type:</strong>
   <%= @account.accountType %>
 </p>
 
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-  <strong>Minbalance:</strong>
+  <strong>Overdraft:</strong>
   <%= @account.overdraft %>
 </p>
 
