--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Branchname:</strong>
+  <strong>Branch Name:</strong>
   <%= @branch.branchName %>
 </p>
 
 <p>
-  <strong>Branchlocation:</strong>
+  <strong>Branch Location:</strong>
   <%= @branch.branchLocation %>
 </p>
 
 <p>
-  <strong>Branchpostcode:</strong>
+  <strong>Branch Postcode:</strong>
   <%= @branch.branchPostcode %>
 </p>
 
