--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Fullname:</strong>
+  <strong>Full Name:</strong>
   <%= @employee.fullname %>
 </p>
 
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-  <strong>Employeerole:</strong>
+  <strong>Employee Role:</strong>
   <%= @employee.employeeRole %>
 </p>
 
