--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -34,7 +34,7 @@
   </div>
 		<div class="form-group">
 			<%= f.label :Email_Address_Please_ask_customer_Internet_Register_Email_and_Select_From_Following_List %><br>
-			<%= f.collection_select :email, @set_user_account, :id, :email, {}, { :class => "form-control"} %>
+			<%= f.collection_select :email, User.all.where(:verify => false), :id, :email, {}, { :class => "form-control"} %>
 
   </div>
 		<div class="form-group">
@@ -56,7 +56,7 @@
 
   <div class="form-group">
 		<%= f.label :Branch_Name %><br>
-		<%= f.collection_select :branchName, @get_branch, :id, :branchLocation, {}, { :class => "form-control"} %>
+		<%= f.collection_select :branchName, Branch.all, :id, :branchLocation, {}, { :class => "form-control"} %>
 
 	</div>
 
