--- a/app/views/branches/_branch.html.erb
+++ b/app/views/branches/_branch.html.erb
@@ -10,6 +10,7 @@
       <th colspan="1">Branch Name</th>
       <th colspan="1">Branch Location</th>
       <th colspan="1">Branch Postcode</th>
+			<th colspan="1">Edit Branch</th>
       <th colspan="1"></th>
     </tr>
   </thead>
