--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,10 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Account Number:</strong>
-  <%= @account.customer_id %>
-</p>
-
+  <h3 align="center"> Account Number: <%= @account.customer_id %></h3>
+  <br/><br/>
 <p>
 	<strong>Name:</strong>
   <%= @account.name %>
