--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -66,3 +66,6 @@
 <%= link_to 'Back', accounts_path %>
 
 <%= render 'transactions/transaction', obj: @transactions %>
+<%= link_to 'Back', accounts_path %>
+<br/><br/>
+<br/><br/>
